src/main/java/com/example/payroll/web/error/UserNotFoundException.java
package com.example.payroll.web.error;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(Long id) {
        super("Could not find user " + id);
    }
}
